<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:id="@+id/mainPanel"
                                             android:baselineAligned="false"
                                             android:orientation="vertical">
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--tools:context="hr.stips.myapplication.Prevoditelj"-->


    <TextView
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/prevedeniTextID"
        android:background="#FFF"
        android:gravity="left|center_vertical"
        android:enabled="true"
        android:textSize="20sp"
        android:hint="@string/prijevod_teksta_na_cirilici_hint"
        android:textIsSelectable="true"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevedi"
        android:id="@+id/prevediButtonID"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="@+id/guideline14"
        app:layout_constraintVertical_bias="0.33"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:id="@+id/uneseniTextID"
        android:background="#FFF"
        android:editable="true"
        android:gravity="left|center_vertical"
        android:textSize="20sp"
        android:hint="@string/unesi_tekst_za_prevod_na_latinici_hint"
        android:inputType="text"
        android:textIsSelectable="false"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textViewNazivProzorcica1"
        android:background="#FFF"
        android:text="@string/Latinica"
        app:layout_constraintBottom_toTopOf="@+id/uneseniTextID"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/uneseniTextID"
        app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:id="@+id/textViewNazivProzorcica2"
        android:background="#FFF"
        android:text="@string/Ćirilica"
        app:layout_constraintBottom_toTopOf="@+id/prevedeniTextID"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/prevedeniTextID"
        app:layout_constraintHorizontal_bias="0.0"/>

    <Spinner
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:id="@+id/switchFunctionsSpinnerID"
        android:contentDescription="@string/zamjeni"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"/>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline14"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="256dp"
        tools:layout_editor_absoluteX="0dp"/>

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"
        tools:layout_editor_absoluteY="128dp"
        tools:layout_editor_absoluteX="0dp"/>


</android.support.constraint.ConstraintLayout>
